docs: add appendix, continous action, review personal experience

--- a/report/references.bib
+++ b/report/references.bib
@@ -140,4 +140,57 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{silver2016mastering,
+  added-at = {2022-01-12T14:28:12.000+0100},
+  author = {Silver, David and Huang, Aja and Maddison, Chris J. and Guez, Arthur and Sifre, Laurent and van den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and Dieleman, Sander and Grewe, Dominik and Nham, John and Kalchbrenner, Nal and Sutskever, Ilya and Lillicrap, Timothy and Leach, Madeleine and Kavukcuoglu, Koray and Graepel, Thore and Hassabis, Demis},
+  biburl = {https://www.bibsonomy.org/bibtex/2e3bd772f62209ea8283e242f993d3edf/stumme},
+  doi = {10.1038/nature16961},
+  interhash = {48430c7891aaf9fe2582faa8f5d076c1},
+  intrahash = {e3bd772f62209ea8283e242f993d3edf},
+  journal = {Nature},
+  keywords = {alphaGo deep learning},
+  month = jan,
+  number = 7587,
+  pages = {484--489},
+  publisher = {Springer Science and Business Media {LLC}},
+  timestamp = {2022-01-12T14:28:12.000+0100},
+  title = {Mastering the game of Go with deep neural networks and tree search},
+  url = {https://doi.org/10.1038%2Fnature16961},
+  volume = 529,
+  year = 2016
+}
 
+@misc{dosovitskiy2017carla,
+      title={CARLA: An Open Urban Driving Simulator}, 
+      author={Alexey Dosovitskiy and German Ros and Felipe Codevilla and Antonio Lopez and Vladlen Koltun},
+      year={2017},
+      eprint={1711.03938},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{bojarski2016end,
+      title={End to End Learning for Self-Driving Cars}, 
+      author={Mariusz Bojarski and Davide Del Testa and Daniel Dworakowski and Bernhard Firner and Beat Flepp and Prasoon Goyal and Lawrence D. Jackel and Mathew Monfort and Urs Muller and Jiakai Zhang and Xin Zhang and Jake Zhao and Karol Zieba},
+      year={2016},
+      eprint={1604.07316},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@article{lecun2015deep,
+  added-at = {2022-01-19T10:28:11.000+0100},
+  author = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  biburl = {https://www.bibsonomy.org/bibtex/2fcb4570f4481d2e36239cc683ce7261e/msteininger},
+  interhash = {6e8511bc64ba3e808ebf330db96a4ea5},
+  intrahash = {fcb4570f4481d2e36239cc683ce7261e},
+  journal = {nature},
+  keywords = {imported},
+  number = 7553,
+  pages = 436,
+  publisher = {Nature Publishing Group},
+  timestamp = {2022-01-19T10:28:11.000+0100},
+  title = {Deep learning},
+  volume = 521,
+  year = 2015
+}
