chore: cleanup code

--- a/notebooks/highway_simulation_rl_project.ipynb
+++ b/notebooks/highway_simulation_rl_project.ipynb
@@ -12693,7 +12693,7 @@
     "\n",
     "    agent = DDQN(action_dim, hidden_dim, learning_rate, gamma, epsilon, target_update)\n",
     "    replay_buffer = ReplayBuffer(buffer_size)\n",
-    "    return_list = training_helpers.train_agent(highway_env, agent, num_episodes, replay_buffer, minimal_size, batch_size)\n",
+    "    return_list = training_helpers.train(highway_env, agent, num_episodes, replay_buffer, minimal_size, batch_size)\n",
     "    \n",
     "    final_return = np.mean(return_list)\n",
     "    return final_return\n",
@@ -12774,7 +12774,7 @@
     "\n",
     "replay_buffer = ReplayBuffer(buffer_size)\n",
     "agent = DDQN(action_dim, hidden_dim, lr, gamma, epsilon, target_update)\n",
-    "return_list = training_helpers.train_agent(highway_env, agent, num_episodes, replay_buffer, minimal_size, batch_size)\n",
+    "return_list = training_helpers.train(highway_env, agent, num_episodes, replay_buffer, minimal_size, batch_size)\n",
     "\n",
     "torch.save(agent.state_dict(), \"./models/highway_ddqn_attention/model.pt\")"
    ]
@@ -12816,6 +12816,9 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
+    "from ddqn_attention import eval_helpers\n",
+    "\n",
+    "\n",
     "logs_dir = \"./logs\"\n",
     "\n",
     "os.makedirs(logs_dir, exist_ok=True)\n",
@@ -12828,7 +12831,7 @@
     "plt.title('Double DQN on {}'.format('highway-fast-v0'))\n",
     "plt.savefig(f\"{logs_dir}/highway_ddqn_attention/ddqn_returns.png\")\n",
     "\n",
-    "mv_return = training_helpers.moving_average(return_list, 55)\n",
+    "mv_return = eval_helpers.moving_average(return_list, 55)\n",
     "plt.plot(episodes_list, mv_return)\n",
     "plt.xlabel('Episodes')\n",
     "plt.ylabel('Rewards')\n",
@@ -13106,7 +13109,7 @@
     "        total_reward = 0\n",
     "        frames = []\n",
     "        while not (done or truncated):\n",
-    "            action = agent.take_action(obs)\n",
+    "            action = agent.act(obs)\n",
     "            obs, reward, done, truncated, _ = highway_env.step(action)\n",
     "            frame = highway_env.render()\n",
     "            frames.append(frame)\n",
